# JNU_helicorder_status

./: .gitignore  LICENSE  README  README.md  helicorder_all_station.html  helicorder_one_station.html  plot_helicorder.py  plot_helicorder_v2.py  pyproject.toml  stationlist.json
scripts/: draw_helicorder_v1.py  plot_helicorder_v1.py  test.py
